[gd_scene load_steps=36 format=3 uid="uid://ctl4d7gduq701"]

[ext_resource type="Texture2D" uid="uid://b24t74v8syjmc" path="res://Assets/Textures/Backgrounds/OptionsBackground.png" id="1_6kbbk"]
[ext_resource type="Texture2D" uid="uid://d4f1gstadffqk" path="res://Assets/Textures/Icons/PowerIcon.png" id="1_wbwc7"]
[ext_resource type="Script" uid="uid://b8bpjmq8dahd5" path="res://Assets/Scripts/DefaultScript.gd" id="1_wmgoe"]
[ext_resource type="Texture2D" uid="uid://dr0asvy4uat0m" path="res://Assets/Textures/Backgrounds/PreviewBackground.png" id="2_lv5e7"]
[ext_resource type="Texture2D" uid="uid://dt52vmmbcr7g4" path="res://Assets/Textures/Backgrounds/Shader.png" id="2_xvm51"]
[ext_resource type="Texture2D" uid="uid://qb2hoeibf52k" path="res://Assets/Textures/Icons/SettingsIcon.png" id="3_y4ecp"]
[ext_resource type="Theme" uid="uid://ggaet022hl5u" path="res://Assets/Custom Themes/SideButtonTheme.tres" id="4_ww48f"]
[ext_resource type="Texture2D" uid="uid://cjuji1mc6cdxl" path="res://Assets/Textures/Icons/SettingsIcon-Pressed.png" id="5_frl37"]
[ext_resource type="Texture2D" uid="uid://be7f67egfyd3o" path="res://Assets/Textures/Icons/PowerIcon-Pressed.png" id="8_utu8n"]
[ext_resource type="Texture2D" uid="uid://bkwwildmacrfc" path="res://Assets/Textures/Icons/PowerIcon-Focused.png" id="9_tp87p"]
[ext_resource type="Texture2D" uid="uid://cxb2105rh4htp" path="res://Assets/Textures/Icons/UpdateIcon.png" id="10_2pvwk"]
[ext_resource type="Texture2D" uid="uid://dgsjrcntnwc2x" path="res://Assets/Textures/Icons/UpdateIcon-Pressed.png" id="11_2qp0i"]
[ext_resource type="PackedScene" path="res://Assets/Scenes/SettingsScene.tscn" id="11_utu8n"]
[ext_resource type="Texture2D" uid="uid://c5uwxiwa0tdv5" path="res://Assets/Textures/Icons/UpdateIcon-Focused.png" id="12_rxauu"]
[ext_resource type="Texture2D" uid="uid://vkcsjety0tao" path="res://Assets/Textures/Icons/SettingsIcon-Focused.png" id="12_tp87p"]
[ext_resource type="Theme" uid="uid://ow000d0w1g6a" path="res://Assets/Custom Themes/SettingsTheme.tres" id="13_xvm51"]
[ext_resource type="PackedScene" path="res://Assets/Scenes/ErrorScene.tscn" id="14_p1b5j"]
[ext_resource type="Texture2D" uid="uid://bnberx0u0k7gg" path="res://Assets/Textures/Logo Backgrounds/AppleTV.png" id="15_mbpuf"]
[ext_resource type="PackedScene" path="res://Assets/Scenes/YoutubeSelectionScene.tscn" id="15_tp87p"]
[ext_resource type="AudioStream" uid="uid://ch73ixjbo5k4l" path="res://Assets/Sounds/BlipSound.wav" id="16_8f2q7"]
[ext_resource type="Texture2D" uid="uid://cmumda413s570" path="res://Assets/Textures/Logo Backgrounds/Disney.png" id="16_p1b5j"]
[ext_resource type="Texture2D" uid="uid://cw7s3jhgxvfo6" path="res://Assets/Textures/Logo Backgrounds/HBOMax.png" id="17_tp87p"]
[ext_resource type="Texture2D" uid="uid://bnv2otgcfo8r4" path="res://Assets/Textures/Logo Backgrounds/Hulu.png" id="18_2pvwk"]
[ext_resource type="Texture2D" uid="uid://c7bwvbsohhs3p" path="res://Assets/Textures/Logo Backgrounds/Netflix.png" id="19_te0b7"]
[ext_resource type="Texture2D" uid="uid://dcthcl2dvnwsd" path="res://Assets/Textures/Logo Backgrounds/Paramount.png" id="20_2qp0i"]
[ext_resource type="Texture2D" uid="uid://dbgxjuxbc675h" path="res://Assets/Textures/Logo Backgrounds/PrimeVideo.png" id="21_rxauu"]
[ext_resource type="Texture2D" uid="uid://d3lymu2sggbqj" path="res://Assets/Textures/Logo Backgrounds/Youtube.png" id="22_tj8bl"]
[ext_resource type="AudioStream" uid="uid://dg2x6yq7k52cl" path="res://Assets/Sounds/Select.wav" id="28_rxauu"]

[sub_resource type="Animation" id="Animation_mbpuf"]
resource_name = "Settings Load"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainGUI:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Vector2(0, 0), Vector2(-708, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MainGUI/SettingsScene:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_tp87p"]
resource_name = "Settings Load Out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainGUI:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.5, 0.5),
"update": 0,
"values": [Vector2(-708, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MainGUI/SettingsScene:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tp87p"]
_data = {
&"Settings Load": SubResource("Animation_mbpuf"),
&"Settings Load Out": SubResource("Animation_tp87p")
}

[sub_resource type="Animation" id="Animation_xvm51"]
resource_name = "Preview Fade In"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PreviewImage:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_8f2q7"]
resource_name = "Preview Fade Out"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PreviewImage:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_lv5e7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PreviewImage:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8f2q7"]
_data = {
&"Preview Fade In": SubResource("Animation_xvm51"),
&"Preview Fade Out": SubResource("Animation_8f2q7"),
&"RESET": SubResource("Animation_lv5e7")
}

[node name="DefaultScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wmgoe")

[node name="BackgroundImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_lv5e7")
expand_mode = 2

[node name="PreviewImage" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 2

[node name="Borders" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="TopShader" type="TextureRect" parent="Borders"]
custom_minimum_size = Vector2(710, 200)
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_xvm51")
expand_mode = 3

[node name="CenterShader" type="TextureRect" parent="Borders"]
custom_minimum_size = Vector2(0, 680)
layout_mode = 2
size_flags_vertical = 3
expand_mode = 2

[node name="BottomShader" type="TextureRect" parent="Borders"]
custom_minimum_size = Vector2(710, 200)
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_xvm51")
expand_mode = 2
flip_v = true

[node name="ClockMarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -38.0
offset_right = 2.0
offset_bottom = 41.0
grow_horizontal = 0
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20

[node name="ClockLabel" type="Label" parent="ClockMarginContainer"]
layout_mode = 2
theme = ExtResource("13_xvm51")
theme_override_font_sizes/font_size = 25

[node name="MainGUI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="OptionsBackground" type="TextureRect" parent="MainGUI"]
custom_minimum_size = Vector2(504, 0)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -250.0
offset_right = 250.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_6kbbk")

[node name="OptionsBox" type="VBoxContainer" parent="MainGUI/OptionsBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
alignment = 1

[node name="TopMargin" type="MarginContainer" parent="MainGUI/OptionsBackground/OptionsBox"]
layout_mode = 2
theme_override_constants/margin_top = 75
theme_override_constants/margin_bottom = 200

[node name="TitleBox" type="VBoxContainer" parent="MainGUI/OptionsBackground/OptionsBox/TopMargin"]
layout_mode = 2

[node name="AppTitle" type="Label" parent="MainGUI/OptionsBackground/OptionsBox/TopMargin/TitleBox"]
layout_mode = 2
theme = ExtResource("4_ww48f")
theme_override_constants/outline_size = 7
text = "Stream Deck"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AppVersion" type="Label" parent="MainGUI/OptionsBackground/OptionsBox/TopMargin/TitleBox"]
layout_mode = 2
theme = ExtResource("4_ww48f")
theme_override_constants/outline_size = 7
theme_override_font_sizes/font_size = 23
text = "v0.00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ServicesBox" type="VBoxContainer" parent="MainGUI/OptionsBackground/OptionsBox"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 0
alignment = 1

[node name="Amazon" type="Button" parent="MainGUI/OptionsBackground/OptionsBox/ServicesBox"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("4_ww48f")
text = "Amazon Prime"

[node name="AppleTV" type="Button" parent="MainGUI/OptionsBackground/OptionsBox/ServicesBox"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("4_ww48f")
text = "Apple TV"

[node name="Disney" type="Button" parent="MainGUI/OptionsBackground/OptionsBox/ServicesBox"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("4_ww48f")
text = "Disney+"

[node name="HBOMax" type="Button" parent="MainGUI/OptionsBackground/OptionsBox/ServicesBox"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("4_ww48f")
text = "HBO Max"

[node name="Netflix" type="Button" parent="MainGUI/OptionsBackground/OptionsBox/ServicesBox"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("4_ww48f")
text = "Netflix"

[node name="Paramount" type="Button" parent="MainGUI/OptionsBackground/OptionsBox/ServicesBox"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("4_ww48f")
text = "Paramount+"

[node name="Youtube" type="Button" parent="MainGUI/OptionsBackground/OptionsBox/ServicesBox"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("4_ww48f")
text = "Youtube"

[node name="BottomMargin" type="MarginContainer" parent="MainGUI/OptionsBackground/OptionsBox"]
layout_mode = 2
theme_override_constants/margin_top = 200
theme_override_constants/margin_bottom = 75

[node name="ConfigBox" type="HBoxContainer" parent="MainGUI/OptionsBackground/OptionsBox/BottomMargin"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 16
alignment = 1

[node name="Power" type="TextureButton" parent="MainGUI/OptionsBackground/OptionsBox/BottomMargin/ConfigBox"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
texture_normal = ExtResource("1_wbwc7")
texture_pressed = ExtResource("8_utu8n")
texture_disabled = ExtResource("8_utu8n")
texture_focused = ExtResource("9_tp87p")
ignore_texture_size = true
stretch_mode = 0

[node name="Update" type="TextureButton" parent="MainGUI/OptionsBackground/OptionsBox/BottomMargin/ConfigBox"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
texture_normal = ExtResource("10_2pvwk")
texture_pressed = ExtResource("11_2qp0i")
texture_disabled = ExtResource("11_2qp0i")
texture_focused = ExtResource("12_rxauu")
ignore_texture_size = true
stretch_mode = 0

[node name="Settings" type="TextureButton" parent="MainGUI/OptionsBackground/OptionsBox/BottomMargin/ConfigBox"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
texture_normal = ExtResource("3_y4ecp")
texture_pressed = ExtResource("5_frl37")
texture_disabled = ExtResource("5_frl37")
texture_focused = ExtResource("12_tp87p")
ignore_texture_size = true
stretch_mode = 0

[node name="SettingsScene" parent="MainGUI" instance=ExtResource("11_utu8n")]
visible = false
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(1412, 0)
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
offset_left = -708.0
offset_right = 704.0
grow_horizontal = 0

[node name="YoutubeSelectionScene" parent="." instance=ExtResource("15_tp87p")]
visible = false
layout_mode = 1

[node name="ErrorScene" parent="." instance=ExtResource("14_p1b5j")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="SettingsAnimations" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_tp87p")
}

[node name="LogoAnimations" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_8f2q7")
}

[node name="FetchLatestGithubRelease" type="HTTPRequest" parent="."]
use_threads = true
timeout = 20.0

[node name="DownloadLatestGithubRelease" type="HTTPRequest" parent="."]
use_threads = true
timeout = 20.0

[node name="ClockUpdates" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="PreloadedImages" type="ResourcePreloader" parent="."]
resources = [PackedStringArray("AppleTV", "Disney", "HBOMax", "Hulu", "Netflix", "Paramount", "PrimeVideo", "Youtube"), [ExtResource("15_mbpuf"), ExtResource("16_p1b5j"), ExtResource("17_tp87p"), ExtResource("18_2pvwk"), ExtResource("19_te0b7"), ExtResource("20_2qp0i"), ExtResource("21_rxauu"), ExtResource("22_tj8bl")]]

[node name="MenuSounds" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_8f2q7")
volume_db = -5.0

[node name="MenuClicks" type="AudioStreamPlayer" parent="."]
stream = ExtResource("28_rxauu")
volume_db = -5.0

[connection signal="focus_entered" from="MainGUI/OptionsBackground/OptionsBox/ServicesBox/Amazon" to="." method="_on_button_focus_gained" binds= ["PrimeVideo"]]
[connection signal="focus_exited" from="MainGUI/OptionsBackground/OptionsBox/ServicesBox/Amazon" to="." method="_on_button_focus_lost" binds= ["PrimeVideo"]]
[connection signal="mouse_entered" from="MainGUI/OptionsBackground/OptionsBox/ServicesBox/Amazon" to="." method="_on_mouse_entered_focus_toggle" binds= ["PrimeVideo", true]]
[connection signal="mouse_exited" from="MainGUI/OptionsBackground/OptionsBox/ServicesBox/Amazon" to="." method="_on_mouse_entered_focus_toggle" binds= ["PrimeVideo", false]]
[connection signal="pressed" from="MainGUI/OptionsBackground/OptionsBox/ServicesBox/Amazon" to="." method="_on_any_service_button_pressed" binds= ["PrimeVideo"]]
[connection signal="focus_entered" from="MainGUI/OptionsBackground/OptionsBox/ServicesBox/AppleTV" to="." method="_on_button_focus_gained" binds= ["AppleTV"]]
[connection signal="focus_exited" from="MainGUI/OptionsBackground/OptionsBox/ServicesBox/AppleTV" to="." method="_on_button_focus_lost" binds= ["AppleTV"]]
[connection signal="mouse_entered" from="MainGUI/OptionsBackground/OptionsBox/ServicesBox/AppleTV" to="." method="_on_mouse_entered_focus_toggle" binds= ["AppleTV", true]]
[connection signal="mouse_exited" from="MainGUI/OptionsBackground/OptionsBox/ServicesBox/AppleTV" to="." method="_on_mouse_entered_focus_toggle" binds= ["AppleTV", false]]
[connection signal="pressed" from="MainGUI/OptionsBackground/OptionsBox/ServicesBox/AppleTV" to="." method="_on_any_service_button_pressed" binds= ["AppleTV"]]
[connection signal="focus_entered" from="MainGUI/OptionsBackground/OptionsBox/ServicesBox/Disney" to="." method="_on_button_focus_gained" binds= ["Disney"]]
[connection signal="focus_exited" from="MainGUI/OptionsBackground/OptionsBox/ServicesBox/Disney" to="." method="_on_button_focus_lost" binds= ["Disney"]]
[connection signal="mouse_entered" from="MainGUI/OptionsBackground/OptionsBox/ServicesBox/Disney" to="." method="_on_mouse_entered_focus_toggle" binds= ["Disney", true]]
[connection signal="mouse_exited" from="MainGUI/OptionsBackground/OptionsBox/ServicesBox/Disney" to="." method="_on_mouse_entered_focus_toggle" binds= ["Disney", false]]
[connection signal="pressed" from="MainGUI/OptionsBackground/OptionsBox/ServicesBox/Disney" to="." method="_on_any_service_button_pressed" binds= ["Disney"]]
[connection signal="focus_entered" from="MainGUI/OptionsBackground/OptionsBox/ServicesBox/HBOMax" to="." method="_on_button_focus_gained" binds= ["HBOMax"]]
[connection signal="focus_exited" from="MainGUI/OptionsBackground/OptionsBox/ServicesBox/HBOMax" to="." method="_on_button_focus_lost" binds= ["HBOMax"]]
[connection signal="mouse_entered" from="MainGUI/OptionsBackground/OptionsBox/ServicesBox/HBOMax" to="." method="_on_mouse_entered_focus_toggle" binds= ["HBOMax", true]]
[connection signal="mouse_exited" from="MainGUI/OptionsBackground/OptionsBox/ServicesBox/HBOMax" to="." method="_on_mouse_entered_focus_toggle" binds= ["HBOMax", false]]
[connection signal="pressed" from="MainGUI/OptionsBackground/OptionsBox/ServicesBox/HBOMax" to="." method="_on_any_service_button_pressed" binds= ["HBOMax"]]
[connection signal="focus_entered" from="MainGUI/OptionsBackground/OptionsBox/ServicesBox/Netflix" to="." method="_on_button_focus_gained" binds= ["Netflix"]]
[connection signal="focus_exited" from="MainGUI/OptionsBackground/OptionsBox/ServicesBox/Netflix" to="." method="_on_button_focus_lost" binds= ["Netflix"]]
[connection signal="mouse_entered" from="MainGUI/OptionsBackground/OptionsBox/ServicesBox/Netflix" to="." method="_on_mouse_entered_focus_toggle" binds= ["Netflix", true]]
[connection signal="mouse_exited" from="MainGUI/OptionsBackground/OptionsBox/ServicesBox/Netflix" to="." method="_on_mouse_entered_focus_toggle" binds= ["Netflix", false]]
[connection signal="pressed" from="MainGUI/OptionsBackground/OptionsBox/ServicesBox/Netflix" to="." method="_on_any_service_button_pressed" binds= ["Netflix"]]
[connection signal="focus_entered" from="MainGUI/OptionsBackground/OptionsBox/ServicesBox/Paramount" to="." method="_on_button_focus_gained" binds= ["Paramount"]]
[connection signal="focus_exited" from="MainGUI/OptionsBackground/OptionsBox/ServicesBox/Paramount" to="." method="_on_button_focus_lost" binds= ["Paramount"]]
[connection signal="mouse_entered" from="MainGUI/OptionsBackground/OptionsBox/ServicesBox/Paramount" to="." method="_on_mouse_entered_focus_toggle" binds= ["Paramount", true]]
[connection signal="mouse_exited" from="MainGUI/OptionsBackground/OptionsBox/ServicesBox/Paramount" to="." method="_on_mouse_entered_focus_toggle" binds= ["Paramount", false]]
[connection signal="pressed" from="MainGUI/OptionsBackground/OptionsBox/ServicesBox/Paramount" to="." method="_on_any_service_button_pressed" binds= ["Paramount"]]
[connection signal="focus_entered" from="MainGUI/OptionsBackground/OptionsBox/ServicesBox/Youtube" to="." method="_on_button_focus_gained" binds= ["Youtube"]]
[connection signal="focus_exited" from="MainGUI/OptionsBackground/OptionsBox/ServicesBox/Youtube" to="." method="_on_button_focus_lost" binds= ["Youtube"]]
[connection signal="mouse_entered" from="MainGUI/OptionsBackground/OptionsBox/ServicesBox/Youtube" to="." method="_on_mouse_entered_focus_toggle" binds= ["Youtube", true]]
[connection signal="mouse_exited" from="MainGUI/OptionsBackground/OptionsBox/ServicesBox/Youtube" to="." method="_on_mouse_entered_focus_toggle" binds= ["Youtube", false]]
[connection signal="pressed" from="MainGUI/OptionsBackground/OptionsBox/ServicesBox/Youtube" to="." method="_on_any_service_button_pressed" binds= ["YoutubeSelection"]]
[connection signal="focus_entered" from="MainGUI/OptionsBackground/OptionsBox/BottomMargin/ConfigBox/Power" to="." method="_on_other_buttons_focus_gained"]
[connection signal="mouse_entered" from="MainGUI/OptionsBackground/OptionsBox/BottomMargin/ConfigBox/Power" to="." method="_on_mouse_entered_focus_toggle" binds= ["Power", true]]
[connection signal="mouse_exited" from="MainGUI/OptionsBackground/OptionsBox/BottomMargin/ConfigBox/Power" to="." method="_on_mouse_entered_focus_toggle" binds= ["Power", false]]
[connection signal="pressed" from="MainGUI/OptionsBackground/OptionsBox/BottomMargin/ConfigBox/Power" to="." method="_on_power_pressed"]
[connection signal="focus_entered" from="MainGUI/OptionsBackground/OptionsBox/BottomMargin/ConfigBox/Update" to="." method="_on_other_buttons_focus_gained"]
[connection signal="mouse_entered" from="MainGUI/OptionsBackground/OptionsBox/BottomMargin/ConfigBox/Update" to="." method="_on_mouse_entered_focus_toggle" binds= ["Update", true]]
[connection signal="mouse_exited" from="MainGUI/OptionsBackground/OptionsBox/BottomMargin/ConfigBox/Update" to="." method="_on_mouse_entered_focus_toggle" binds= ["Update", false]]
[connection signal="pressed" from="MainGUI/OptionsBackground/OptionsBox/BottomMargin/ConfigBox/Update" to="." method="_on_update_pressed"]
[connection signal="focus_entered" from="MainGUI/OptionsBackground/OptionsBox/BottomMargin/ConfigBox/Settings" to="." method="_on_other_buttons_focus_gained"]
[connection signal="mouse_entered" from="MainGUI/OptionsBackground/OptionsBox/BottomMargin/ConfigBox/Settings" to="." method="_on_mouse_entered_focus_toggle" binds= ["Settings", true]]
[connection signal="mouse_exited" from="MainGUI/OptionsBackground/OptionsBox/BottomMargin/ConfigBox/Settings" to="." method="_on_mouse_entered_focus_toggle" binds= ["Settings", false]]
[connection signal="pressed" from="MainGUI/OptionsBackground/OptionsBox/BottomMargin/ConfigBox/Settings" to="." method="_on_settings_pressed"]
[connection signal="timeout" from="ClockUpdates" to="." method="_on_clock_updates_timeout"]
